--- a/src/scss/modules/_modals.scss
+++ b/src/scss/modules/_modals.scss
@@ -28,8 +28,13 @@
 	border-bottom: none;
 	text-align: center;
 	.close {
-		margin-top: -75px;
-    margin-right: -75px;
+		margin-top: -10px;
+		margin-right: -10px;
+		@include breakpoint($small) {
+			margin-top: -75px;
+	    margin-right: -75px;	
+		}
+
     color: white;
     background-color: $dark-gray;
     opacity: 1;
