--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -6005,7 +6005,8 @@ input.radio, select.radio {
   .property_box .property_tile_info .prop-price, .property_box .property_tile_info .bottom-info, .property_box .property_tile_info .prop-details, .property_box .property_tile_info .prop-location, .property_box .property_tile_info .price, .property_box .property_tile_info .currency, .property_box .property_tile_info .ownership, .property_box .property_tile_info .sqft-details {
     font-family: "Copernicus-Medium";
     font-size: 15px;
-    line-height: 21.75px; } }
+    line-height: 21.75px;
+    font-weight: 500; } }
 
 .property_box .property_tile_info .sqft-details {
   display: inline-block; }
