--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -27,7 +27,7 @@
 					<span class="name">{{ title }}</span>
 				</a>
 				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
-				<a href="{{ email}}"><span class="details">{{ theme:partial src="svg/mail" }} {{ email }}</span></a>
+				<a href="mailto:{{ email }}"><span class="details">{{ theme:partial src="svg/mail" }} {{ email }}</span></a>
 			</div>
 			{{ endif }}
 			{{ /entries:listing }}
