added brochures to mobile

--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -224,6 +224,7 @@
 		}
 	}
 	.agent-details {
+		margin-left: 5px;
 		@include breakpoint($large) {
 			@include span (last 2 of 3 no-gutter);
 		}
