added brochures to mobile

--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -226,6 +226,7 @@
 	.agent-details {
 		margin-left: 5px;
 		@include breakpoint($large) {
+			margin-left: 0;
 			@include span (last 2 of 3 no-gutter);
 		}
 		
