--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4135,6 +4135,7 @@ footer .footer-divider {
 
 @media (min-width: 1280px) {
   .property-agents .agent-details {
+    margin-left: 0;
     box-sizing: border-box;
     width: 66.66667%;
     float: right; } }
