--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4101,7 +4101,7 @@ footer .footer-divider {
 .property-agents .agent-image {
   text-align: center;
   box-sizing: border-box;
-  width: 33.33333%;
+  width: 25%;
   float: left;
   padding-right: 10px; }
 
@@ -4112,6 +4112,9 @@ footer .footer-divider {
 
 @media (min-width: 992px) {
   .property-agents .agent-image {
+    box-sizing: border-box;
+    width: 33.33333%;
+    float: left;
     text-align: left; }
   .property-agents .agent-image img {
     max-width: 100%; } }
