--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4130,15 +4130,17 @@ footer .footer-divider {
 .property-agents img:hover {
   border: 2px solid #009B77; }
 
-.property-agents .agent-details {
-  margin-left: 5px;
-  box-sizing: border-box;
-  width: 66.66667%;
-  float: right; }
+.property-agents .agent-details li {
+  padding-left: 5px; }
 
 @media (min-width: 1280px) {
   .property-agents .agent-details {
-    margin-left: 0; } }
+    margin-left: 0;
+    box-sizing: border-box;
+    width: 66.66667%;
+    float: right; }
+  .property-agents .agent-details li {
+    padding-left: 0; } }
 
 .property-agents li:hover {
   color: #009B77; }
