anchor links blog

--- a/src/scss/components/_blog_overview.scss
+++ b/src/scss/components/_blog_overview.scss
@@ -123,6 +123,9 @@
 		}
 	}
 	.preview,.blog.blog-entry {
+		a {
+			text-decoration: underline;
+		}
 		@include span(full);
 		@include breakpoint($tiny) {
 			@include span(last 4 of 7 );
