--- a/src/scss/components/_blog_entry.scss
+++ b/src/scss/components/_blog_entry.scss
@@ -22,6 +22,11 @@
 	.main-image {
 		margin: 30px 0;
 	}
+	a {
+		text-decoration: underline;
+		@include hbase($hFontM);
+		color: $text-green;
+	}
 	h2 {
 		margin-bottom: 10px;
 		font-size: 28px;
