--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5165,6 +5165,9 @@ footer .footer-divider {
   padding-left: 1.25%;
   padding-right: 1.25%; }
 
+.blog .preview a, .blog .blog.blog-entry a {
+  text-decoration: underline; }
+
 @media (min-width: 480px) {
   .blog .preview, .blog .blog.blog-entry {
     box-sizing: border-box;
@@ -5256,6 +5259,13 @@ footer .footer-divider {
 
 .blog.blog-entry .blog-left .main-image {
   margin: 30px 0; }
+
+.blog.blog-entry .blog-left a {
+  text-decoration: underline;
+  font-family: "Copernicus-Medium";
+  font-size: 16px;
+  line-height: 26px;
+  color: #009B77; }
 
 .blog.blog-entry .blog-left h2 {
   margin-bottom: 10px;
