--- a/src/scss/components/_blog_entry.scss
+++ b/src/scss/components/_blog_entry.scss
@@ -22,7 +22,7 @@
 	.main-image {
 		margin: 30px 0;
 	}
-	a {
+	p a {
 		text-decoration: underline;
 		@include hbase($hFontM);
 		color: $text-green;
