--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -7,6 +7,7 @@
 	aside {
 		display: none;
 	}
+
 	@include breakpoint($small) {
 
 		.container {
@@ -17,6 +18,9 @@
 	@include breakpoint($medium) {
 		aside {
 			display: block;
+		}
+		.details-small {
+			display: none;
 		}
 	}
 	.sticky-wrapper {
