--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -123,48 +123,49 @@
 					</div>
 					{{ /photo_carousel}}
 				</div>
-				<div class="agent-internal">
-					<div class="agent property-agents">
-						{{ relate:agents }}
-						<div class="agent-block">
-							<a class="agent-image" href="{{ url }}">
-								<img src="{{ transform src="{{ image }}" width="300" }}" class="img-circle" />
-							</a>
-							<div class="agent-details">
-								<a href="{{ url }}"><span>{{ title }}</span></a>
-								<ul>
-								{{ if phone }}<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>{{ endif }}
-								{{ if email }}<li>{{ theme:partial src="svg/mail" }} {{ email|link }}</li>{{ endif }}
-								</ul>
-							</div>
-						</div>
-						{{ /relate:agents }}
-					</div>
-					</div>
-					<div class="dotted"></div>
-					{{ if brochure or floor_plans }}
-					
-					<div class="agent property-downloads">
-					{{ if brochure }}
-						<a href="{{ brochure }}" target="_blank">
-							{{ theme:partial src="svg/download" }}
-							<span>Brochure</span>
-						</a>
-					{{ endif }}
-					{{ if floor_plans }}
-						<a href="{{ floor_plans }}" target="_blank">
-							{{ theme:partial src="svg/floorplans" }}
-							<span>Floorplans</span>
-						</a>
-					{{ endif }}
-					</div>
-					{{ endif }}
-					<div class="dotted"></div>
-
-					<div class="agent property-schedule">
-						<a data-toggle="modal" data-target="#viewing-modal" href="#" class="btn btn-garfield">Schedule a viewing</a>
-
+<div class="details-small">
+	<div class="agent-internal">
+		<div class="agent property-agents">
+			{{ relate:agents }}
+			<div class="agent-block">
+				<a class="agent-image" href="{{ url }}">
+					<img src="{{ transform src="{{ image }}" width="300" }}" class="img-circle" />
+				</a>
+				<div class="agent-details">
+					<a href="{{ url }}"><span>{{ title }}</span></a>
+					<ul>
+					{{ if phone }}<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>{{ endif }}
+					{{ if email }}<li>{{ theme:partial src="svg/mail" }} {{ email|link }}</li>{{ endif }}
+					</ul>
 				</div>
+			</div>
+			{{ /relate:agents }}
+		</div>
+		</div>
+		<div class="dotted"></div>
+		{{ if brochure or floor_plans }}
+		
+		<div class="agent property-downloads">
+		{{ if brochure }}
+			<a href="{{ brochure }}" target="_blank">
+				{{ theme:partial src="svg/download" }}
+				<span>Brochure</span>
+			</a>
+		{{ endif }}
+		{{ if floor_plans }}
+			<a href="{{ floor_plans }}" target="_blank">
+				{{ theme:partial src="svg/floorplans" }}
+				<span>Floorplans</span>
+			</a>
+		{{ endif }}
+		</div>
+		{{ endif }}
+		<div class="dotted"></div>
+	
+		<div class="agent property-schedule">
+			<a data-toggle="modal" data-target="#viewing-modal" href="#" class="btn btn-garfield">Schedule a viewing</a>
+		</div>
+</div>
 				<div class="green-specs">
 					<div class="specs">
 					<div class="title">
