--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -63,6 +63,10 @@ a {
 
 .agents-background {
   background-color: $agents-background;
+  @include breakpoint($medium) {
+    height: 450px !important;
+  }
+  
 }
 
 .bg-light-blue {
