--- a/wwwroot/_themes/main/templates/agent_individual.html
+++ b/wwwroot/_themes/main/templates/agent_individual.html
@@ -2,7 +2,7 @@
 	<div class="container">
 
 		<aside class="sticky">					
-			<img class="circle" src="{{ path src="{{ image }}" }}" class="img-circle" />
+			<img class="circle" src="{{ image }}" class="img-circle" />
 			<div class="agent-name">{{ title }}</div>
 			<ul>
 				{{ if phone }}<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>{{ endif }}
