--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -24,7 +24,7 @@
 				<span class="prop-location">{{ property_location }}</span>
 			</div>
 			<div class="bottom-info">
-				{{ if openhouse }}
+				{{ if openhouse|not_empty }}
 					<div class="red">Open House</div>
 				{{ elseif streeteasy_status != "active" }}
 				<div>
