--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -24,7 +24,9 @@
 				<span class="prop-location">{{ property_location }}</span>
 			</div>
 			<div class="bottom-info">
-
+				{{ if openhouse }}
+					<div class="red">Open House</div>
+				{{ endif }}
 				{{ if streeteasy_status != "active" }}
 				<div>
 				{{ if streeteasy_status=="in-contract" }}
