--- a/statamic/_themes/main/templates/streeteasy.html
+++ b/statamic/_themes/main/templates/streeteasy.html
@@ -88,7 +88,7 @@
 		</amenities>
 		{{ endif }}
 	</details>
-	{{ if openhouse }}
+	{{ if openhouse  != "false" }}
 	<openHouses>
 		{{ openhouse_grid }}
 		<openHouse>
