--- a/statamic/_themes/main/layouts/default.html
+++ b/statamic/_themes/main/layouts/default.html
@@ -18,9 +18,7 @@
   <meta property="og:postal-code" content="10022" />
   <meta property="og:country-name" content="USA" />
   <title>{{ title }} - {{ _site_name }}</title>
-  <!-- build:css -->
-  <link rel="stylesheet" href="{{ theme:css src="main.min" }}" />
-  <!-- endbuild -->
+  <link rel="stylesheet" href="{{ theme:css src="main.min.css" }}" />
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
 
 <link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
@@ -54,39 +52,6 @@
     </div>
     {{ theme:partial src="footer" }}
 
-  <!-- build:js -->
-  <script src="{{ theme:js src="main.min" }}"></script>
-  <script type="text/javascript">
-
-  window.onload = function(){
-    var elements = document.getElementsByClassName("price-descriptor");
-    for (var i=0; i<elements.length; i++){
-      elements[i].innerHTML = elements[i].innerHTML.replace(/\\b([a-z])([a-z]+)?\\b/gim, "<span class='first-letter'>1</span>$2");
-    }
-  }
-
-
-  </script>
-<script>
-function pinIt()
-{
-  var e = document.createElement('script');
-  e.setAttribute('type','text/javascript');
-  e.setAttribute('charset','UTF-8');
-  e.setAttribute('src','https://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);
-  document.body.appendChild(e);
-}
-</script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-70942725-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-  <!-- endbuild -->
+  <script src="{{ theme:js src="main.min.js" }}"></script>
 </body>
 </html>
